--- a/package.json
+++ b/package.json
@@ -39,5 +39,9 @@
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.3"
+  },
+  "dependencies": {
+    "autoprefixer": "10.4.5",
+    "nouislider": "^15.6.0"
   }
 }
